--- a/main.css
+++ b/main.css
@@ -1,14 +1,14 @@
 body, html {
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
+    overflow: hidden;
 }
 
 .container {
     height: 100%;
     width: 100%;
     background-color: #eeeeee;
-    display:flex;
-
+    display: flex;
 }
 
 .box-pc {
@@ -78,6 +78,23 @@ body, html {
     border: 2px solid gray;
     display: flex;
     flex-wrap: wrap;
+}
+
+.card-show {
+    top: 0 !important;
+}
+
+.card-pc {
+    position: relative;
+    top: 1200px;
+    width: 70%;
+    height: 90%;
+    background: white;
+    border-radius: 20px;
+    border: 2px solid gray;
+    display: flex;
+    flex-wrap: wrap;
+    transition: top 1s ease-out;
 }
 
 .card-name {
@@ -232,4 +249,8 @@ body, html {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.selected {
+    background-color: red !important; 
 }
