--- a/main.css
+++ b/main.css
@@ -49,12 +49,13 @@ body, html {
 }
 
 .box-console {
-    height: 60%;
+    height: 50%;
     width: 100%;
     background-color: black;
     color: white;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -77,10 +78,18 @@ body, html {
 .card {
     width: 70%;
     height: 90%;
-    background: white;
+    background: #333333;
     border-radius: 20px;
     border: 2px solid gray;
-    display: flex;
+}
+
+.esconder {
+    background: #eeeeee;
+    border-radius: 20px;
+    border: 2px solid gray;
+    width: 100%;
+    height: 100%;
+    display: none;
     flex-wrap: wrap;
 }
 
@@ -257,4 +266,64 @@ body, html {
 
 .selected {
     background-color: red !important; 
+}
+
+.btn-proxima-partida {
+    height: 50px;
+    width: 170px;
+    background: red;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    border: 2px solid darkred;
+    font-weight: bold;
+}
+
+.rodada {
+    width: 100%;
+    height: 10%;
+    background-color: #333333;
+    color: white;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+}
+
+.modal {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .8);
+    color:white;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 1.5em;
+}
+
+.btn-jogar-novamente {
+    height: 50px;
+    width: 280px;
+    background: red;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    border: 2px solid darkred;
+    font-weight: bold;
+    display: flex;
+}
+
+.placar {
+    display: flex;
+    flex-direction: row;
+}
+
+.placar h3 {
+    padding: 10px;
 }
