--- a/main.css
+++ b/main.css
@@ -35,7 +35,7 @@ body, html {
 .box-vida {
     width: 100%;
     height: 10%;
-    background-color: red;
+    background-color: rgb(221, 90, 90);
     text-align: center;
 }
 
@@ -49,7 +49,7 @@ body, html {
 }
 
 .box-console {
-    height: 50%;
+    height: 90%;
     width: 100%;
     background-color: black;
     color: white;
@@ -78,9 +78,8 @@ body, html {
 .card {
     width: 70%;
     height: 90%;
-    background: #333333;
-    border-radius: 20px;
-    border: 2px solid gray;
+    background: linear-gradient(135deg, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 38%, rgba(44,44,44,1) 46%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 60%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%);
+    border-radius: 15px;
 }
 
 .esconder {
@@ -332,7 +331,20 @@ body, html {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     font-weight: bold;
     font-size: 1.5em;
     z-index: 999;
+}
+
+.btn-ok {
+    height: 50px;
+    width: 170px;
+    background: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    border: 2px solid darkred;
+    font-weight: bold;
 }
