--- a/main.css
+++ b/main.css
@@ -97,7 +97,8 @@ body, html {
 }
 
 .esconder {
-    background: #000000;
+    background-image: url(img/background-colorido.jpg);
+    background-repeat: repeat;
     border-radius: 20px;
     border: 2px solid black;
     width: 100%;
@@ -115,7 +116,7 @@ body, html {
     top: 1200px;
     width: 70%;
     height: 90%;
-    background: black;
+    background-image: url(img/background-colorido.jpg);
     border-radius: 20px;
     border: 2px solid black;
     display: flex;
@@ -126,7 +127,7 @@ body, html {
 .card-name {
     height: 30%;
     width: 50%;
-    background-color: #eeeeee;
+    background: rgb(0, 0, 0,.6);
     border-radius: 0 20px 0 0;
     display: flex;
     align-items: center;
@@ -138,12 +139,13 @@ body, html {
     text-transform: uppercase;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5em;
+    color: white;
 }
 
 .card-image {
     height: 30%;
     width: 50%;
-    background-color: #eeeeee;
+    background: rgb(0, 0, 0,.6);
     border-radius: 20px 0 0 0;
     display: flex;
     align-items: center;
@@ -223,8 +225,7 @@ body, html {
     height: 30%;
     width: 60%;
     border-radius: 0 0 0 20px;
-    background-image: url(img/fire.png);
-    background-position: center;
+    background: rgb(255, 50, 0, .6);
     display: flex;
     flex-direction: column;
 }
@@ -258,7 +259,7 @@ body, html {
 .card-activator {
     height: 30%;
     width: 40%;
-    background-color: #333333;
+    background: rgb(0, 0, 0,.6);
     color: white;
     border-radius: 0 0 20px 0;
     display: flex;
